:bug: Made case-sensitive

--- a/styles/atom-ds-ignore.less
+++ b/styles/atom-ds-ignore.less
@@ -5,6 +5,6 @@
 @import 'ui-variables';
 
 // A style to hide .DS_Store files
-span.name.icon.finder-icon[title='.ds_store' i] {
+span.name.icon.finder-icon[title='.DS_Store'] {
   display: none;
 }
